welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:78: error: ';' expected but 'else' found.
else return
^